[package]
name = "oltcore"
version = "0.1.0"
edition = "2024"
description = "A Rust library for interacting with Huawei MA5800 OLT devices"
license = "MIT"
categories = ["network-programming"]
keywords = ["huawei", "olt", "ma5800", "ssh", "networking"]
repository = "https://github.com/hubnarinet/oltcore"

[dependencies]
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["serialization"]
serialization = ["serde", "serde_json"]
